replace static classes by facades

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         }
     ],
     "autoload": {
+        "files": [
+            "src/Support/helpers.php"
+        ],
         "psr-4": {
             "Icarus\\": "src/"
         }
