--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
